FIX :       1. Backgroung Image changes.       2. Name changes.       3. Scrollbar FIx.

--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body
 
 ::-webkit-scrollbar-track
 {
-    background: transparent;
+    background: rgb(0, 0, 0);
 }
 
 ::-webkit-scrollbar-thumb
